--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@flamework/networking": "^1.3.1",
     "@rbxts/animation": "^2.1.0",
     "@rbxts/gamejoy": "^1.1.4",
+    "@rbxts/hotfusion": "^0.3.0-hotfusion.1",
     "@rbxts/signals": "^1.0.5"
   }
 }
